<resources>
    <string name="app_name">SportDoctorFollow</string>
    <string name="userNameTxtE">UserName@email.com</string>
    <string name="passwordTxtE">Password</string>
    <string name="textviewWelcome">Welcome to the Health App</string>
    <string name="SignIn">Sign In</string>
    <string name="RegisterNow">Register Now</string>
    <string name="firstwelcome">Welcome to the Health</string>
    <string name="questionregisternow">Not a member?</string>
    <string name="welcomeregister">Welcome to improve your Healt</string>
    <string name="name_reg">Name</string>
    <string name="address_Reg">Address</string>
    <string name="phone_reg">+1 123-456-7890</string>
    <string name="email_reg">email@email.com</string>
    <string name="doctor">Doctor</string>
    <string name="Trainer">Trainer</string>
    <string name="Nutricionist">Nutricionist</string>
    <string name="SportPerson">Sport Person</string>
    <string name="Beginner">Beginner</string>
    <string name="RegisterBtn">Register</string>
    <string name="pacientSpin">Pacient :</string>
    <string name="DoctorMainTitle">Choose de Pacient User</string>
    <string name="pacientMark">Pacient:</string>
    <string name="OrderExam">Order following Test to pacient:</string>
    <string name="OrderExamBtn">Order Test</string>
    <string name="viewTestBtn">Download Pacient Test</string>
    <string name="sugestedWorkoutsBtn">Get Suggested Workout</string>
    <string name="UserFollow">Welcome you are in the profile of </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="BloodPreasureTitle">"Blood Preasure: "</string>
    <string name="WeightTitle">Weight:</string>
    <string name="Fat_percentage">"Fat(%): "</string>
    <string name="Heart_Rate">"Heart Rate: "</string>
    <string name="Calories_Title">"Calories Burn: "</string>
    <string name="Send_KPI">Send Data</string>
    <string name="upload_test">Upload</string>
    <string name="upload_test_order_by_doctor">Upload Test order by Doctor</string>
    <string name="testimage">test</string>
    <string name="the_required_test_are">The required test are:</string>
    <string name="sendWorkout">Send Workout</string>
    <string name="WorkOutTitle">Work Out Available</string>
    <string name="your_workout_is">Your Workout is:</string>
</resources>