<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greenpastel"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="56dp"
        android:text="@string/firstwelcome"
        android:textColor="#888888"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/questionregisternow"
        android:layout_width="139dp"
        android:layout_height="44dp"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/questionregisternow"
        android:textColor="#888888"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInBtn"
        app:layout_constraintVertical_bias="0.059" />

    <Button
        android:id="@+id/signInBtn"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_heigth"
        android:layout_marginBottom="259dp"
        android:backgroundTint="@color/buttoncolormain"
        android:text="@string/SignIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/PasswordTxtE"
        app:layout_constraintStart_toStartOf="@+id/PasswordTxtE"
        app:layout_constraintTop_toBottomOf="@+id/PasswordTxtE"
        tools:cornerRadius="@dimen/button_corner_radius" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="139dp"
        android:layout_height="44dp"
        android:layout_marginTop="64dp"
        android:background="@android:color/transparent"
        android:text="@string/RegisterNow"
        android:textColor="@color/RegisterNow"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInBtn"
        app:layout_constraintVertical_bias="0.056" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="103dp"
        android:layout_height="92dp"
        android:layout_marginBottom="27dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/userNameTxtE"
        app:layout_constraintEnd_toEndOf="@+id/Welcome"
        app:layout_constraintStart_toStartOf="@+id/Welcome"
        app:layout_constraintTop_toBottomOf="@+id/Welcome"
        app:srcCompat="@drawable/siginimage" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="74dp"
        android:layout_height="39dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <EditText
        android:id="@+id/userNameTxtE"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_heigth"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/userNameTxtE"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/PasswordTxtE"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/PasswordTxtE"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_heigth"
        android:layout_marginBottom="31dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/passwordTxtE"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/signInBtn"
        app:layout_constraintEnd_toEndOf="@+id/userNameTxtE"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/userNameTxtE"
        app:layout_constraintTop_toBottomOf="@+id/userNameTxtE" />

</androidx.constraintlayout.widget.ConstraintLayout>