<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserFragmentInsertKpi">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="419dp"
        android:layout_height="735dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Blood Pressure -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/bloodPreasureTitleTxtE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/BloodPreasureTitle"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/sistolicTxtE"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/bloodPreasureSepTxtE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:text=" / "
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/DiastolicTxtE"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/mmHgTxtE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="mmHg"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- Weight -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/WeightTitleTxtE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/WeightTitle"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/WeightTxtE"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <!-- Fat -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/FatTitleTxtE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Fat_percentage"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/FatTxtE"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <!-- Heart Rate -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/HeartRateTitleTxtE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Heart_Rate"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/HeartRateTxtE"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <!-- Calories -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/caloriesTitleTxtE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Calories_Title"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/caloriesTxtE"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="394dp"
                android:layout_height="297dp" />

            <!-- Button -->

            <Button
                android:id="@+id/SendDataBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/buttoncolormain"
                android:text="@string/Send_KPI" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
